# ipakit

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  TODO.md  conftest.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
docs/: releasing.md
ipakit/: __init__.py  _base.py  _convert.py  _tokenize.py  analysis.py  constants.py  distance.py  distance_model.py  features.py  hierarchy.py  mapper.py  models.py  phonemaps.py  validation.py  xsampa.py
ipakit/cli/: __init__.py  __main__.py  analysis_cmds.py  analyze.py  base.py  convert.py  distance.py  features.py  hierarchy.py  info.py  query.py
ipakit/data/: confusion.json  ipa.xml
ipakit/data/phonemaps/: cmu.xml  kirshenbaum.xml  lookalikes.xml  timit.xml  xsampa.xml
scripts/: confusion.py  xsampa_table.py
tests/: test_analysis.py  test_api.py  test_cli.py  test_cmu.py  test_confusion.py  test_distance.py  test_distance_model.py  test_features.py  test_hierarchy.py  test_models.py  test_phonemaps.py  test_query.py  test_stress.py  test_strict.py  test_tokenization.py  test_validation.py  test_wiki.py  test_xsampa.py
