[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ipakit"
version = "0.1.0"
description = "IPA phonetic toolkit"
authors = [
    {name = "Kevin Lenzo"}
]
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
keywords = ["ipa", "phonetics", "phonology", "linguistics", "speech", "cmu", "arpabet", "timit"]
dependencies = []

[project.optional-dependencies]
# icukit (ICU transliteration) is dev-only: it powers scripts/xsampa_table.py
# (table generation/validation) and the X-SAMPA cross-check tests. It is NOT
# imported at runtime — ipakit ships the generated table in data/phonemaps/.
dev = ["pytest>=7.0", "ruff>=0.1", "mypy>=1.0", "icukit>=0.1.2"]

[project.urls]
Homepage = "https://github.com/lenzo/ipakit"
Repository = "https://github.com/lenzo/ipakit"

[project.scripts]
ipakit = "ipakit.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["ipakit*"]

[tool.setuptools.package-data]
ipakit = ["data/*.xml", "data/phonemaps/*.xml", "data/*.json", "py.typed"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require network, deselect with '-m \"not slow\"')",
]
# Scope collection to the package and tests (keeps --doctest-modules from
# importing scripts/). Run docstring examples as part of the suite so they
# can't silently rot; ELLIPSIS lets examples elide volatile output (floats).
testpaths = ["ipakit", "tests"]
doctest_optionflags = ["ELLIPSIS"]
# Don't run slow tests by default
addopts = "-m 'not slow' --doctest-modules"

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
target-version = "py39"
src = ["ipakit", "tests"]

[tool.ruff.lint]
# black owns formatting; ruff lints only. E501 (line length) is left to black.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
# mypy no longer supports targeting 3.9, so type-check at the 3.10 floor.
# Runtime still supports 3.9 (annotations are deferred via __future__ import).
python_version = "3.10"
strict = true
warn_unused_configs = true
files = ["ipakit"]
