[build-system]
# setuptools>=77 is required for the PEP 639 SPDX `license = "MIT"` string form below.
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "ipakit"
dynamic = ["version"]
description = "IPA phonetic toolkit"
readme = "README.md"
authors = [
    {name = "Kevin Lenzo"}
]
license = "MIT"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
keywords = ["ipa", "phonetics", "phonology", "linguistics", "speech", "cmu", "arpabet", "timit"]
dependencies = []

[project.optional-dependencies]
# Split so each CI job installs only what it needs:
#   test - run the suite (pure stdlib; the ICU cross-check self-skips)
#   lint - ruff / black / mypy (pinned to the pre-commit style year)
#   icu  - icukit (ICU transliteration), shipped as a bundled-ICU wheel; powers
#          scripts/xsampa_table.py and the X-SAMPA cross-check. Dev-only, NEVER
#          imported at runtime (ipakit ships the generated table in data/).
#   dev  - everything, for local development.
test = ["pytest>=7.0"]
lint = ["ruff>=0.15", "mypy>=2.1", "black>=26.5,<27"]
icu = ["icukit>=0.1.2"]
dev = ["ipakit[test,lint,icu]"]

[project.urls]
Homepage = "https://github.com/lenzo-ka/ipakit"
Repository = "https://github.com/lenzo-ka/ipakit"
Issues = "https://github.com/lenzo-ka/ipakit/issues"

[project.scripts]
ipakit = "ipakit.cli:main"

# Single source of truth for the version: ipakit.__version__ (see ipakit/__init__.py).
[tool.setuptools.dynamic]
version = {attr = "ipakit.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["ipakit*"]

[tool.setuptools.package-data]
ipakit = ["data/*.xml", "data/phonemaps/*.xml", "data/*.json", "py.typed"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (require network, deselect with '-m \"not slow\"')",
]
# Scope collection to the package and tests (keeps --doctest-modules from
# importing scripts/). Run docstring examples as part of the suite so they
# can't silently rot; ELLIPSIS lets examples elide volatile output (floats).
testpaths = ["ipakit", "tests"]
doctest_optionflags = ["ELLIPSIS"]
# Don't run slow tests by default
addopts = "-m 'not slow' --doctest-modules"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["ipakit", "tests"]

[tool.ruff.lint]
# black owns formatting; ruff lints only. E501 (line length) is left to black.
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["ipakit"]
